# pyteukolsky

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
pyteukolsky/: __init__.py  diagnostics.py  equation.py  evolve.py  grid.py  initialdata.py
scripts/: check_equations.py  plot_waveforms.py  run_example.py  single_mode.py
tests/: test_equation.py  test_evolve.py  test_grid.py  test_kerr.py  test_validation.py
