[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyteukolsky"
version = "0.1.0"
description = "Finite-difference time-domain solver for the Teukolsky equation in Kerr–Schild coordinates"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
sympy = ["sympy>=1.18"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyteukolsky*"]
